# cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  example.cpp
src/include/: example.h
test/: CMakeLists.txt
